# ros2-pi-sense-hat

./: .gitignore  AGENTS.md  ATTINY88_PROTOCOL.md  CLAUDE.md  CMakeLists.txt  IMPLEMENTATION_PLAN.md  KERNEL_DRIVER_DISABLE.md  README.md  SENSOR_FUSION.md  SESSION_SUMMARY.md  STATUS.md  demo_patterns.py  image_display.py  imu_calibration.yaml  log.txt  package.xml  raw_accel_data_20260111_174310.npy  raw_mag_data_20260111_174428.npy  sense-hat-short-spec.md  test_complete_fusion.sh  test_fusion.sh  test_i2c_concurrency.cpp  test_i2c_direct  test_i2c_direct.cpp  test_pattern.py  test_pixel.sh  test_service.sh
.kiro/agents/: cli-runner.json  ros.json
action/: I2CTransaction.action
config/: ekf.yaml  ekf_minimal.yaml  ekf_simple.yaml  imu_params.yaml  madgwick.yaml
datasheets/: AMS-TCS3400.md  ST-LPS25H.md
demo/: calibrate_imu.py  calibrate_imu_wizard.py  camera_to_matrix.py  countdown_demo.py  debug_lsm9ds1.py  debug_sensors.py  diagnose_fusion.py  emoji_demo.py  orientation_display.py  pixel_demo_loop.py  quaternion_level.py  run_joystick.sh  run_led_matrix.sh  run_node.sh  simple_calibrate.py  simple_level.py  test_calibration_applied.py  test_calibration_services.py  test_camera_save.py  test_color.py  test_environmental.py  test_i2c_extensions.py  test_imu.py  test_imu_config.py  test_joystick.py  test_joystick_events.py  test_mag_burst.py  test_pattern.py  test_pixels_fast.py  test_pixels_subprocess.py  test_sensor_fusion.py  verify_imu_config.py
docs/: ATTINY88_PROTOCOL.md  IMU_PARAMETER_GUIDE.md  ROS2_MESSAGE_COMPLIANCE.md  sense-hat-short-spec.md
docs/datasheets/: ST-HTS221.md  ST-LSM9DS1-full.md  ST-LSM9DS1.md  TCS34725.md
docs/guides/: ST-IMU-CAL.md
include/ros2_pi_sense_hat/: attiny88_driver.hpp  hts221_driver.hpp  i2c_client.hpp  i2c_device.hpp  imu_calibration.hpp  lps25h_driver.hpp  lsm9ds1_driver.hpp  tcs3400_driver.hpp
launch/: imu_configured.launch.py  sense_hat.launch.py
scripts/: calibrate_imu.py  calibrate_imu_old.py  ellipsoid_fit.py  run_node.sh  verify_calibration.py
specs/: ACCEL_CALIBRATION_IMPROVEMENT_PLAN.md  CAMERA_VIO_ANALYSIS.md  CAMERA_VIO_SPEC.md  I2C_COORDINATION_DEEP_ANALYSIS.md  I2C_COORDINATION_FINAL_PLAN.md  I2C_COORDINATION_PLAN.md  I2C_COORDINATION_PLAN_claude.md  I2C_COORDINATION_PLAN_copilot.md  I2C_COORDINATION_PLAN_gemini.md  I2C_COORDINATION_PLAN_kiro.md  I2C_GEMINI_CHAT.md  I2C_ZENOH.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PLAN_FINAL.md  IMU_CALIBRATION_PLAN.md  IMU_IMPLEMENTATION_PLAN.md  SENSOR_IMPLEMENTATION.md  SESSION_SUMMARY.md  STATUS.md
specs/archive/: ELLIPSOID_CALIBRATION_FINAL.md  ELLIPSOID_CALIBRATION_PLAN.md  ELLIPSOID_FIT_IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PLAN.md
src/: attiny88_driver.cpp  color_node.cpp  environmental_node.cpp  hts221_driver.cpp  i2c_bridge_node.cpp  i2c_device.cpp  imu_calibration.cpp  imu_node.cpp  joystick_node.cpp  led_matrix_node.cpp  lps25h_driver.cpp  lsm9ds1_driver.cpp  tcs3400_driver.cpp
srv/: ReadJoystick.srv  SetPixel.srv  SetPixels.srv
