<?xml version="1.0"?>
<package format="3">
  <name>ros2_pi_sense_hat</name>
  <version>0.1.0</version>
  <description>ROS2 package for Raspberry Pi Sense HAT v2</description>
  <maintainer email="patrik@todo.todo">Patrik Berglund</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>unique_identifier_msgs</depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
